Add additional variables to control interface

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,6 +4,13 @@
 # Sets the RUN parameter to "yes" or "no" in /etc/defaults/apf-firewall
 apf_firewall_enabled: "yes"
 
+# Untrusted Network interface(s)
+apf_firewall_IFACE_IN: "eth0"
+apf_firewall_IFACE_OUT: "eth0"
+
+# Trusted Network interface(s)
+apf_firewall_IFACE_TRUSTED: ""
+
 # Ingress (inbound) TCP Ports to open
 apf_firewall_IG_TCP_CPORTS: "22"
 
